--- a/project2_Moon/Moon.html
+++ b/project2_Moon/Moon.html
@@ -1089,7 +1089,7 @@ GERTY:&lt;br/&gt;
 
 &lt;div class=&quot;back&quot;&gt;
 
-&lt;video class=&quot;back-img&quot; src=&quot;10.mp4&quot; autoplay &gt;
+&lt;video class=&quot;back-img&quot; src=&quot;10.mp4&quot; autoplay loop &gt;
 &lt;/video&gt;
 &lt;/div&gt;
 &lt;div class=&quot;frame&quot;&gt;
@@ -1249,7 +1249,7 @@ GERTY:&lt;br/&gt;
 
 </tw-passagedata><tw-passagedata pid="23" name="I keep moving " tags="" position="596.3333333333334,1279.3333333333333" size="100,100">&lt;div class=&quot;back&quot;&gt;
 
-&lt;video class=&quot;back-img&quot; src=&quot;07.mp4&quot; autoplay &gt;
+&lt;video class=&quot;back-img&quot; src=&quot;07.mp4&quot; autoplay loop &gt;
 &lt;/video&gt;
 &lt;/div&gt;
 &lt;div class=&quot;frame&quot;&gt;
@@ -4179,7 +4179,7 @@ TweenLite.fromTo(img2, 2, {y: &#39;-=5vh&#39;}, {y: 0});
 
 </tw-passagedata><tw-passagedata pid="95" name="[Moving towards southwest] " tags="" position="378,1329.6666666666667" size="100,100">&lt;div class=&quot;back&quot;&gt;
 
-&lt;video class=&quot;back-img&quot; src=&quot;10.mp4&quot; autoplay &gt;
+&lt;video class=&quot;back-img&quot; src=&quot;10.mp4&quot; autoplay loop &gt;
 &lt;/video&gt;
 &lt;/div&gt;
 
